--- a/index.html
+++ b/index.html
@@ -6,33 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeAPI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        html,
-        body {
-            height: 100%;
-        }
-
-        .container-flex {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        .content-wrap {
-            flex: 1;
-        }
-
-        .bg-red {
-            background-color: red;
-        }
-
-        .bg-red .navbar-brand,
-        .bg-red .navbar-toggler,
-        .bg-red .btn,
-        .footer-text {
-            color: white;
-        }
-    </style>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
