--- a/mainPage.html
+++ b/mainPage.html
@@ -6,18 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeAPI - Mi Equipo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .bg-red {
-            background-color: red;
-        }
-
-        .bg-red .navbar-brand,
-        .bg-red .navbar-toggler,
-        .bg-red .btn,
-        .footer-text {
-            color: white;
-        }
-    </style>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
