--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-red">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">PokeAPI</a>
-                <button class="btn btn-outline-light" type="submit">Iniciar Sesión</button>
+                <p><a class="btn btn-outline-light" href="./login.html">Iniciar Sesión &raquo;</a></p>
             </div>
         </nav>
 
