--- a/login.html
+++ b/login.html
@@ -6,24 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeAPI - Inicio de Sesión</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .bg-orange {
-            background-color: orange;
-        }
-
-        .btn-red {
-            background-color: red;
-            color: white;
-        }
-
-        .form-signin {
-            width: 100%;
-            max-width: 400px;
-            padding: 15px;
-            margin: auto;
-            border-radius: 5px;
-        }
-    </style>
+    <link href="css/login.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
