--- a/mainPage.html
+++ b/mainPage.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">PokeAPI</a>
             <div class="d-flex">
-                <button class="btn btn-outline-light" type="button">Cerrar Sesión</button>
+                <p><a class="btn btn-outline-light" href="./login.html">Cerrar Sesión &raquo;</a></p>
             </div>
         </div>
     </nav>
