--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <div class="container mt-4">
                 <div class="row">
                     <div class="col-12">
-                        <input type="text" class="form-control" id="pokemonSearchInput" placeholder="Buscar Pokémon">
+                        <form id="searchForm">
+                            <input type="text" class="form-control" id="pokemonSearchInput"
+                                placeholder="Buscar Pokémon">
+                        </form>
                     </div>
                 </div>
                 <div class="row mt-3">
@@ -55,6 +58,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Aquí va tu script de JavaScript para interactuar con la API y manejar eventos -->
+    <script src="js/index.js"></script>
 </body>
 
 </html>
