adding the api response to the table

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <div class="container mt-4">
                 <div class="row">
                     <div class="col-12">
-                        <form id="searchForm">
+                        <div class="input-group">
                             <input type="text" class="form-control" id="pokemonSearchInput"
                                 placeholder="Buscar Pokémon">
-                        </form>
+                            <button class="btn btn-outline-secondary" type="button" id="searchButton">Buscar</button>
+                        </div>
                     </div>
                 </div>
                 <div class="row mt-3">
@@ -38,7 +39,8 @@
                             <thead>
                                 <tr>
                                     <th>Nombre</th>
-                                    <th>Descripción</th>
+                                    <th>Tipo</th>
+                                    <th>Imagen</th>
                                     <!-- Agrega más columnas según necesites -->
                                 </tr>
                             </thead>
