--- a/mainPage.html
+++ b/mainPage.html
@@ -22,22 +22,21 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-6">
-                <input type="text" class="form-control mb-3" id="pokemonSearchInput" placeholder="Buscar Pokémon">
+                <!-- <input type="text" class="form-control mb-3" id="pokemonSearchInput" placeholder="Buscar Pokémon"> -->
+                <div class="input-group">
+                    <input type="text" class="form-control" id="pokemonSearchInput" placeholder="Buscar Pokémon">
+                    <button class="btn btn-outline-secondary" type="button" id="searchButton">Buscar</button>
+                </div>
                 <table class="table">
                     <thead>
                         <tr>
                             <th>Nombre</th>
-                            <th>Descripción</th>
+                            <th>Tipo</th>
+                            <th>Imagen</th>
                             <th>Acción</th>
                         </tr>
                     </thead>
                     <tbody id="pokemonSearchResults">
-                        <!-- Ejemplo estático -->
-                        <tr>
-                            <td>Pikachu</td>
-                            <td>Un Pokémon eléctrico</td>
-                            <td><button class="btn btn-primary">Agregar a Equipo</button></td>
-                        </tr>
                         <!-- Más resultados de búsqueda aquí -->
                     </tbody>
                 </table>
@@ -72,6 +71,7 @@
 
     <!-- Aquí van tus scripts de JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/mainPage.js"></script>
 </body>
 
 </html>
