--- a/mainPage.html
+++ b/mainPage.html
@@ -10,64 +10,63 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-red">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">PokeAPI</a>
-            <div class="d-flex">
-                <p><a class="btn btn-outline-light" href="./login.html">Cerrar Sesión &raquo;</a></p>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-md-6">
-                <!-- <input type="text" class="form-control mb-3" id="pokemonSearchInput" placeholder="Buscar Pokémon"> -->
-                <div class="input-group">
-                    <input type="text" class="form-control" id="pokemonSearchInput" placeholder="Buscar Pokémon">
-                    <button class="btn btn-outline-secondary" type="button" id="searchButton">Buscar</button>
+    <div class="container-flex">
+        <nav class="navbar navbar-expand-lg bg-red">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">PokeAPI</a>
+                <div class="d-flex">
+                    <p><a class="btn btn-outline-light" href="./login.html">Cerrar Sesión &raquo;</a></p>
                 </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Tipo</th>
-                            <th>Imagen</th>
-                            <th>Acción</th>
-                        </tr>
-                    </thead>
-                    <tbody id="pokemonSearchResults">
-                        <!-- Más resultados de búsqueda aquí -->
-                    </tbody>
-                </table>
             </div>
-            <div class="col-md-6">
-                <h3>Mi Equipo Pokémon</h3>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Tipo</th>
-                            <th>Acción</th>
-                        </tr>
-                    </thead>
-                    <tbody id="pokemonTeam">
-                        <!-- Ejemplo estático -->
-                        <tr>
-                            <td>Charmander</td>
-                            <td>Fuego</td>
-                            <td><button class="btn btn-danger">Quitar</button></td>
-                        </tr>
-                        <!-- Pokémon en el equipo aquí -->
-                    </tbody>
-                </table>
+        </nav>
+        <div class="content-wrap">
+
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-md-6">
+                        <!-- <input type="text" class="form-control mb-3" id="pokemonSearchInput" placeholder="Buscar Pokémon"> -->
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="pokemonSearchInput"
+                                placeholder="Buscar Pokémon">
+                            <button class="btn btn-outline-secondary" type="button" id="searchButton">Buscar</button>
+                        </div>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Nombre</th>
+                                    <th>Tipo</th>
+                                    <th>Imagen</th>
+                                    <th>Acción</th>
+                                </tr>
+                            </thead>
+                            <tbody id="pokemonSearchResults">
+                                <!-- Más resultados de búsqueda aquí -->
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Mi Equipo Pokémon</h3>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Nombre</th>
+                                    <th>Tipo</th>
+                                    <th>Imagen</th>
+                                    <th>Acción</th>
+                                </tr>
+                            </thead>
+                            <tbody id="pokemonTeam">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <footer class="bg-red text-white text-center py-2">
-        <p class="footer-text">© 2024 PokeAPI Project. Todos los derechos reservados.</p>
-    </footer>
+        <footer class="bg-red text-white text-center py-2">
+            <p class="footer-text">© 2024 PokeAPI Project. Todos los derechos reservados.</p>
+        </footer>
+    </div>
 
     <!-- Aquí van tus scripts de JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
