finished adding and removing pokemon functionality, fixed some fixes

--- a/mainPage.html
+++ b/mainPage.html
@@ -15,7 +15,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">PokeAPI</a>
                 <div class="d-flex">
-                    <p><a class="btn btn-outline-light" href="./login.html">Cerrar Sesión &raquo;</a></p>
+                    <p><a class="btn btn-outline-light" href="./index.html">Cerrar Sesión &raquo;</a></p>
                 </div>
             </div>
         </nav>
